--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <title>ThinkLfy</title>
 </head>
 <body>
-  
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">ThinkLfy</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,8 +40,66 @@
     </ul>
   </div>
 </nav>
+<!--*******************************************End of nav*********************************************************-->
 
-<!-- Optional JavaScript -->
+  
+<div class="container-fluid">
+                                          <!--  row 1  -->
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+    <div class="col">
+      4 of 3
+    </div>
+  </div>
+  
+  
+                                          <!--  row 2  -->
+  <div class="row">
+        <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+    <div class="col">
+      4 of 3
+    </div>
+  </div>
+  
+                                          <!--  row 3  -->  
+  <div class="row">
+        <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+    <div class="col">
+      4 of 3
+    </div>  
+  </div>  
+                                        
+                                    <!--  end of rows  -->
+  
+  
+</div>
+                                <!--  end of containner fuild  -->
+
+  <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
