--- a/index.html
+++ b/index.html
@@ -47,50 +47,45 @@
                                           <!--  row 1  -->
   <div class="row">
     <div class="col">
-      1 of 3
+      Climate
     </div>
     <div class="col">
-      2 of 3
+      water
     </div>
     <div class="col">
-      3 of 3
+     Ecocosystem and Gabitad
     </div>
     <div class="col">
-      4 of 3
+      Pollution
     </div>
   </div>
   
   
                                           <!--  row 2  -->
   <div class="row">
-        <div class="col">
-      1 of 3
+    <div class="col">
+      Energy
     </div>
     <div class="col">
-      2 of 3
+      Green Building
     </div>
     <div class="col">
-      3 of 3
+      livable building
     </div>
     <div class="col">
-      4 of 3
+      Food
     </div>
   </div>
   
                                           <!--  row 3  -->  
   <div class="row">
-        <div class="col">
-      1 of 3
+    <div class="col">
+      Products
     </div>
     <div class="col">
-      2 of 3
+      Waste and Recycling
     </div>
-    <div class="col">
-      3 of 3
-    </div>
-    <div class="col">
-      4 of 3
-    </div>  
+   
   </div>  
                                         
                                     <!--  end of rows  -->
