--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   
 <div class="container-fluid">
                                           <!--  row 1  -->
-  <div class="row">
+  <div class="row CenText">
     <div class="col">
       Climate
     </div>
@@ -67,7 +67,7 @@
   
   
                                           <!--  row 2  -->
-  <div class="row">
+  <div class="row CenText">
     <div class="col">
       Energy
     </div>
@@ -83,7 +83,7 @@
   </div>
   
                                           <!--  row 3  -->  
-  <div class="row">
+  <div class="row CenText">
     <div class="col">
       Products
     </div>
