--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 <div class="container-fluid">
                                           <!--  row 1  -->
   <div class="row CenText">
-    <div class="col">
+    <div class="col row1row2box">
       Climate
     </div>
-    <div class="col">
+    <div class="col row1row2box">
       water
     </div>
-    <div class="col">
+    <div class="col row1row2box">
      Ecocosystem and Gabitad
     </div>
     <div class="col">
@@ -68,16 +68,16 @@
   
                                           <!--  row 2  -->
   <div class="row CenText">
-    <div class="col">
+    <div class="col row1row2box">
       Energy
     </div>
-    <div class="col">
+    <div class="col row1row2box">
       Green Building
     </div>
-    <div class="col">
+    <div class="col row1row2box">
       livable building
     </div>
-    <div class="col">
+    <div class="col row1row2box">
       Food
     </div>
   </div>
