--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   
 <div class="container-fluid">
                                           <!--  row 1  -->
-  <div class="row CenText">
+  <div class="row CenText row1row2box">
     <div class="col row1row2box">
       Climate
     </div>
