--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
 <div class="container-fluid">
                                           <!--  row 1  -->
   <div class="row CenText row1row2box">
-    <div class="col row1row2box">
-      Climate
+    <div class="col">
+      <div class ="row1row2box">
+        Climate
+        <>
+      
     </div>
     <div class="col row1row2box">
       water
