--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="col">
       <div class ="row1row2box">
         Climate
-        <>
+        </div>
       
     </div>
     <div class="col row1row2box">
