--- a/index.html
+++ b/index.html
@@ -48,14 +48,12 @@
 <!--*******************************************End of nav*********************************************************-->
 
   
+  
 <div class="container-fluid">
                                           <!--  row 1  -->
-  <div class="row CenText row1row2box">
-    <div class="col">
-      <div class ="row1row2box">
+  <div class="row CenText ">
+    <div class="colrow1row2box">
         Climate
-        </div>
-      
     </div>
     <div class="col row1row2box">
       water
