--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
+   
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="https://dannyceron94.github.io/ThinkLfy/#">Home <span class="sr-only">(current)</span></a>
@@ -52,9 +53,12 @@
 <div class="container-fluid">
                                           <!--  row 1  -->
   <div class="row CenText ">
-    <div class="colrow1row2box">
+     <a href="Climate.html">
+       <div class="colrow1row2box">
         Climate
     </div>
+    </a>
+    
     <div class="col row1row2box">
       water
     </div>
