--- a/index.html
+++ b/index.html
@@ -52,12 +52,10 @@
   
 <div class="container-fluid">
                                           <!--  row 1  -->
-  <div class="row CenText ">
-     <a href="Climate.html">
+  <div class="row CenText " href="Climate.html">
        <div class="colrow1row2box">
         Climate
     </div>
-    </a>
     
     <div class="col row1row2box">
       water
