--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                           <!--  row 1  -->
   <div class="row CenText " href="Climate.html">
        <div class="colrow1row2box">
-        Climate
+         <a href="#" class="btn btn-primary btn-lg active" role="button"> Climate</a>
     </div>
     
     <div class="col row1row2box">
