--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
   
 <div class="container-fluid">
                                           <!--  row 1  -->
-  <div class="row CenText " href="Climate.html">
-    <div class="colrow1row2box">
-      <a href="#" class="btn btn-primary btn-lg active" role="button" style="height:100%"> Climate</a>
+  <div class="row CenText " >
+    <div class="col row1row2box">
+      <a href="Climate.html" class="btn btn-primary btn-lg active" role="button" style="height:100% width:100%"> Climate</a>
     </div>
     
     <div class="col row1row2box">
-      <a href="#" class="btn btn-primary btn-lg active" role="button" style="height:100%">Water</a>
+      <a href="#" class="btn btn-primary btn-lg active" role="button" style="height:100% width:100%">Water</a>
     </div>
     <div class="col row1row2box">
-      <a href="#" class="btn btn-primary btn-lg active" role="button" style="height:100%">Ecocosystem and Gabitad</a>
+      <a href="#" class="btn btn-primary btn-lg active" role="button" style="height:100% width:100%">Ecocosystem and Gabitad</a>
     </div>
     <div class="col row1row2box">
-      <a href="#" class="btn btn-primary btn-lg active" role="button" style="height:100%">Pollution</a>
+      <a href="#" class="btn btn-primary btn-lg active" role="button" style="height:100% width:100%">Pollution</a>
      
     </div>
   </div>
