--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
                                           <!--  row 1  -->
   <div class="row CenText " >
     <div class="col row1row2box">
-      <a href="Climate.html" class="btn btn-primary btn-lg active" role="button" style="height:100% width:100%"> Climate</a>
+      <a href="Climate.html" class="btn btn-primary btn-lg active" role="button" > Climate</a>
     </div>
     
     <div class="col row1row2box">
-      <a href="#" class="btn btn-primary btn-lg active" role="button" style="height:100% width:100%">Water</a>
+      <a href="#" class="btn btn-primary btn-lg active" role="button" >Water</a>
     </div>
     <div class="col row1row2box">
-      <a href="#" class="btn btn-primary btn-lg active" role="button" style="height:100% width:100%">Ecocosystem and Gabitad</a>
+      <a href="#" class="btn btn-primary btn-lg active" role="button" >Ecocosystem and Gabitad</a>
     </div>
     <div class="col row1row2box">
-      <a href="#" class="btn btn-primary btn-lg active" role="button" style="height:100% width:100%">Pollution</a>
+      <a href="#" class="btn btn-primary btn-lg active" role="button" >Pollution</a>
      
     </div>
   </div>
