--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <div class="container-fluid">
                                           <!--  row 1  -->
   <div class="row CenText " >
-    <div class="col row1row2box">
-      <a href="Climate.html" class="btn btn-primary btn-lg active" role="button" > Climate</a>
+    <div class="col">
+      <a href="Climate.html" class="btn btn-primary btn-lg active row1row2box" role="button" > Climate</a>
     </div>
     
     <div class="col row1row2box">
@@ -72,7 +72,7 @@
   
                                           <!--  row 2  -->
   <div class="row CenText">
-    <div class="col row1row2box">
+    <div class="col ">
       <a href="#" class="btn btn-primary btn-lg active" role="button" style="height:100%">Energy</a>
       
     </div>
