--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     
     <div class="col row1row2box">
-      <a href="#" class="btn btn-primary btn-lg active" role="button" >Water</a>
+      <a href="#" class="btn btn-primary btn-lg active" role="button" style="height:auto;width:auto" >Water</a>
     </div>
     <div class="col row1row2box">
       <a href="#" class="btn btn-primary btn-lg active" role="button" >Ecocosystem and Gabitad</a>
