--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                           <!--  row 1  -->
   <div class="row CenText " >
     <div class="col">
-      <a href="Climate.html" class="btn btn-primary btn-lg active row1row2box" role="button" > Climate</a>
+      <a href="Climate.html" class="row1row2box" role="button" > Climate</a>
     </div>
     
     <div class="col row1row2box">
