--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <div class="container-fluid">
                                           <!--  row 1  -->
   <div class="row CenText " >
-    <div class="col">
-      <a href="Climate.html" class="row1row2box" role="button" > Climate</a>
+    <div class="col row1row2box">
+      <a href="Climate.html" class="btn btn-primary btn-lg active" role="button" > Climate</a>
     </div>
     
     <div class="col row1row2box">
