--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="https://dannyceron94.github.io/ThinkLfy/#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link center" href="https://dannyceron94.github.io/ThinkLfy/#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Features</a>
