--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
    
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link center" href="https://dannyceron94.github.io/ThinkLfy/#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link center" href="https://dannyceron94.github.io/ThinkLfy/#"> Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#"><div=class"center">Features</div></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Pricing</a>
