--- a/Climate.html
+++ b/Climate.html
@@ -50,14 +50,43 @@
   
 <div class="container-fluid">
                                           <!--  row 1  -->
-  <div class="row CenText " >
-    row 1
+  <div class="row" >
+    <div class = "col center">
+      Many scientists believe that climate change is the most serious crisis facing our planet. People intending to
+work in fields related to sustainability need a clear understanding of what climate change means and the basic
+science behind it. As climate-related risk management becomes a common topic of concern, sustainability
+practitioners will be called upon to advise their organizations about climate impact, to provide greenhouse gas
+inventories and indicator reports, and to develop climate action plans.
+
+
+The combination of exploding population numbers, economic growth, and 150 years of industry based on
+fossil fuels has brought about our rapidly warming climate. A massive amount of ancient carbon has been
+sequestered or stored underground, which we are now burning in our cars and power plants. Millions of years
+ago decaying organic matter was buried by sediments and in the heat and pressure underground became coal,
+oil, and natural gas. When we burn these materials we release the sequestered carbon all at once, throwing
+Earth’s carbon cycle far out of balance.
+
+Since the start of the industrial era the concentration of CO2 in the atmosphere has risen almost 40 percent
+(Houghton 2009, 29).
+
+extremes of weather
+conditions including floods, droughts, and hurricanes; melting of glaciers and polar ice; sea level rise; changing
+ocean currents; changes to terrestrial and marine ecosystems including extinctions; and changes to human
+lifestyles including agriculture and economic issues.
+
+extremes of weather
+conditions including floods, droughts, and hurricanes; melting of glaciers and polar ice; sea level rise; changing
+ocean currents; changes to terrestrial and marine ecosystems including extinctions; and changes to human
+lifestyles including agriculture and economic issues. Actual measurements such as sea level rise, melting of ice,
+and changing ecosystems show systems changing faster than IPCC predictions (Blockstein and Wiegman
+2010, 43).
+    </div>
   </div>
   
   
                                           <!--  row 2  -->
   <div class="row CenText">
-    row 2
+   
   </div>
  
                                         
