--- a/Climate.html
+++ b/Climate.html
@@ -51,7 +51,8 @@
 <div class="container-fluid">
                                           <!--  row 1  -->
   <div class="row" >
-    <div class = "col center">
+    <div class = "col">
+      <p>
       Many scientists believe that climate change is the most serious crisis facing our planet. People intending to
 work in fields related to sustainability need a clear understanding of what climate change means and the basic
 science behind it. As climate-related risk management becomes a common topic of concern, sustainability
@@ -80,6 +81,14 @@ ocean currents; changes to terrestrial and marine ecosystems including extinctio
 lifestyles including agriculture and economic issues. Actual measurements such as sea level rise, melting of ice,
 and changing ecosystems show systems changing faster than IPCC predictions (Blockstein and Wiegman
 2010, 43).
+        
+        </p>
+    </div>
+    <div class ="col">
+      <a href="http://www.asc-csa.gc.ca/eng/satellites/everyday-lives/climate-change-or-global-warming.asp">
+  <img src="http://www.asc-csa.gc.ca/images/satellites/quotidien/changements-climatiques-ou-rechauffement-climatique-ban.jpg" alt="HTML tutorial" style="width:100px;height:50px;border:0;">
+</a>
+
     </div>
   </div>
   
