--- a/Climate.html
+++ b/Climate.html
@@ -90,7 +90,7 @@ and changing ecosystems show systems changing faster than IPCC predictions (Bloc
     </div>
     <div class ="col">
       <a href="http://www.asc-csa.gc.ca/eng/satellites/everyday-lives/climate-change-or-global-warming.asp">
-  <img src="http://www.asc-csa.gc.ca/images/satellites/quotidien/changements-climatiques-ou-rechauffement-climatique-ban.jpg" alt="HTML tutorial" style="width:1000px;height:600px;border:0;">
+  <img src="http://www.asc-csa.gc.ca/images/satellites/quotidien/changements-climatiques-ou-rechauffement-climatique-ban.jpg" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
 </a>
 
     </div>
