--- a/water.html
+++ b/water.html
@@ -43,7 +43,44 @@
 <div class="container-fluid">
                                           <!--  row 1  -->
   <div class="row CenText " >
-    row 1
+    <div class ="col">
+      <p>
+About a fifth of the water we use comes from aquifers (Black and King 2009, 26). Some of this water is
+considered a nonrenewable resource. When rain falls in the hydrologic cycle, some evaporates, some runs off
+the surface, and some infiltrates through the soil and into sand, gravel, and pore spaces in the rock layers
+below.
+</p>
+
+<p>
+Humans in the industrialized world use huge quantities of water to support our lifestyle of a meat-rich diet
+and plentiful consumer goods. Direct water use is only a small part of the total picture of water consumption.
+Everything we eat not only contains water but also used additional water when it was grown. The concept of
+virtual water describes the quantity of water embedded in food and products, measured at the places where
+they were actually produced (Hoekstra and Chapagain 2008, 8). The virtual water content of a thing is also
+sometimes referred to as its water footprint (ibid., 3).
+</p>
+
+<p>
+Worldwide, agriculture makes up 70 percent of the embedded water use, 20 percent of water use comes
+from industry, and 10 percent comes from domestic use (Sachs 2015, 189). In the US about 41 percent of
+water use is for agriculture, 46 percent comes from industry, and 13 percent is for domestic use (Black and
+King 2009, 116). We use a lot of water for drinking, bathing, and cleaning, but the proportion appears
+modest compared to our consumption of virtual water embedded in the food we eat and the things we buy.
+</p>
+
+<p>
+Two options are possible: the traditional approach to solving water problems is to
+locate new supplies; an alternative approach is to use less water. Using less water or using it more efficiently is
+known as water conservation or water efficiency.
+</p>
+
+
+    </div>
+    <div class ="col">
+      <a href="">
+        <img src="water.JPG" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
+      </a>
+    </div>
   </div>
   
   
