--- a/Eco.html
+++ b/Eco.html
@@ -42,9 +42,17 @@
 <div class="container-fluid">
                                           <!--  row 1  -->
   <div class="row CenText " >
-    row 1
+    <div class ="col">
+      
+      <h1>under construction</h1>
+
+    </div>
+    <div class ="col">
+      <a href="">
+        <img src="water.JPG" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
+      </a>
+    </div>
   </div>
-  
   
                                           <!--  row 2  -->
   <div class="row CenText">
