--- a/Eco.html
+++ b/Eco.html
@@ -41,9 +41,15 @@
   
 <div class="container-fluid">
                                           <!--  row 1  -->
-  <div class="row CenText " >
+  <div class="row" >
     <div class ="col">
       
+      <p>
+        An ecosystem is a combination of living and nonliving parts, with each part playing an important role. A
+functioning ecosystem depends on webs of interactions among all the species of plants, animals, fungi, and
+microbes together with rocks, soil, water, and climate. Every organism in an ecosystem occupies a niche. Its
+niche is how it earns its living, its role in the system.
+      </p>
       <h1>under construction</h1>
 
     </div>
