--- a/Eco.html
+++ b/Eco.html
@@ -54,8 +54,8 @@ niche is how it earns its living, its role in the system.
 
     </div>
     <div class ="col">
-      <a href="">
-        <img src="water.JPG" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
+      <a href="https://enterpriseclojure.com/clojure/1-ecosystem.html#/the_clojure_ecosystem">
+        <img src="https://enterpriseclojure.com/img/ecosystem.jpg" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
       </a>
     </div>
   </div>
