--- a/greenB.html
+++ b/greenB.html
@@ -43,7 +43,19 @@
 <div class="container-fluid">
                                           <!--  row 1  -->
   <div class="row CenText " >
-    row 1
+     <div class ="col">
+      
+      <p>
+        
+      </p>
+      <h1>under construction</h1>
+
+    </div>
+    <div class ="col">
+      <a href="https://enterpriseclojure.com/clojure/1-ecosystem.html#/the_clojure_ecosystem">
+        <img src="https://enterpriseclojure.com/img/ecosystem.jpg" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
+      </a>
+    </div>
   </div>
   
   
