--- a/pollution.html
+++ b/pollution.html
@@ -44,20 +44,20 @@
                                           <!--  row 1  -->
   <div class="row CenText " >
     <div class ="col">
+      <div class ="row">
       <h1>
         Air pollution
       </h1>
       <p>Airborne pollutants cause more health problems than any other transport mechanism because the entire
 biosphere is surrounded by air (ibid., 166).</p>
       <p>The EPA
-170
+
 develops criteria for setting permissible levels based on human health and/or ecosystem health. The six criteria
 pollutants are particulates, carbon monoxide, sulfur oxides, nitrogen oxides, lead, and ground-level ozone.
 These pollutants are considered to pose the most serious threats to human health and constitute the largest
 volume of pollutants in the atmosphere. All six are produced by the burning of fossil fuels.</p>
-
-   </div>
-   <div class ="col">
+<div
+      <div class ="row">
       <h1>
         Soil and Land Pollution
       </h1>
@@ -65,7 +65,7 @@ volume of pollutants in the atmosphere. All six are produced by the burning of f
      <p></p>
      <p></p>
    </div>
-   <div class ="col">
+   <div class ="row">
       <h1>
         Water Pollution
       </h1>
@@ -73,6 +73,8 @@ volume of pollutants in the atmosphere. All six are produced by the burning of f
      <p></p>
      <p></p>
    </div>
+   </div>
+  
     <div class ="col">
       <a href="https://enterpriseclojure.com/clojure/1-ecosystem.html#/the_clojure_ecosystem">
         <img src="https://enterpriseclojure.com/img/ecosystem.jpg" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
