--- a/Energy.html
+++ b/Energy.html
@@ -44,9 +44,10 @@
                                           <!--  row 1  -->
   <div class="row CenText " >
        <div class ="col">
+          <h1>Energy</h1>
          
          <div class ="row">
-           <h1>Fossil Fules</h1>
+           <h3>Fossil Fules</h3>
            <p>
              Fossil fuels are a nonrenewable resource. A fossil is literally a rock or mineral dug out of the earth.They are found in three forms: oil, natural gas, and coal.
              Coal is mostly carbon, and when burned it releases the most
@@ -59,7 +60,7 @@ renewable energy.
          </div>
          
          <div class ="row">
-         <h1>Renewable Energy</h1>
+         <h3>Renewable Energy</h3>
            <p>
              Energy is the ability to do work. Power is the rate at which work is done and is measured in watts.
            Using renewable energy offers multiple benefits: improved energy security with
