--- a/greenB.html
+++ b/greenB.html
@@ -75,8 +75,8 @@ are functioning as intended. This is done through the process called building co
 
     </div>
     <div class ="col">
-      <a href="https://enterpriseclojure.com/clojure/1-ecosystem.html#/the_clojure_ecosystem">
-        <img src="https://enterpriseclojure.com/img/ecosystem.jpg" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
+      <a href="https://new.usgbc.org/">
+        <img src="https://s3.amazonaws.com/usgbc-assets/store/PLUS.png" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
       </a>
     </div>
   </div>
