--- a/greenB.html
+++ b/greenB.html
@@ -42,9 +42,10 @@
   
 <div class="container-fluid">
                                           <!--  row 1  -->
-  <div class="row CenText " >
+  <div class="row" >
     <h1>Green Buildings</h1>
      <div class ="col">
+       
       <div class="row">
         <h3>what is a green building?</h3>
         <p>
@@ -75,7 +76,7 @@ are functioning as intended. This is done through the process called building co
 
     </div>
     <div class ="col">
-      <a href="https://new.usgbc.org/">
+      <a href="https://new.usgbc.org">
         <img src="https://s3.amazonaws.com/usgbc-assets/store/PLUS.png" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
       </a>
     </div>
