--- a/greenB.html
+++ b/greenB.html
@@ -72,7 +72,7 @@ referring to the <a href="https://www.usgbc.org/resources/leed-v4-building-desig
 are functioning as intended. This is done through the process called building commissioning.
          </p>
        </div>
-
+</div>
 
     </div>
     <div class ="col">
