--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ body, html {
 </style>
 </head>
 <body>
+  
   <div class="bg">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="https://dannyceron94.github.io/ThinkLfy/">ThinkLfy</a>
@@ -41,6 +42,7 @@ body, html {
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
    
     <ul class="navbar-nav">
+      
       <li class="nav-item active">
         <a class="nav-link center" href="https://dannyceron94.github.io/ThinkLfy"> Home <span class="sr-only">(current)</span></a>
       </li>
@@ -68,6 +70,9 @@ body, html {
 <div class="container-fluid">
                                           <!--  row 1  -->
   <div class="row CenText " >
+    <div class ="row">
+        
+      </div>
     <div class="col row1row2box">
       <a href="Climate.html" class="btn btn-primary btn-lg active" role="button" style="height:100%;width:100%"> Climate</a>
     </div>
