--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ body, html {
                                           <!--  row 1  -->
   <div class="row CenText " >
     <div class ="row">
+      <a href="https://enterpriseclojure.com/clojure/1-ecosystem.html#/the_clojure_ecosystem">
+        <img src="https://begreenpackaging.files.wordpress.com/2012/04/sfsu.jpg" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
+      </a>
         
       </div>
     <div class="col row1row2box">
