--- a/index.html
+++ b/index.html
@@ -68,14 +68,15 @@ body, html {
   
   
 <div class="container-fluid">
-                                          <!--  row 1  -->
-  <div class="row CenText " >
-    <div class ="row">
+  <div class ="row">
       <a href="">
-        <img src="https://begreenpackaging.files.wordpress.com/2012/04/sfsu.jpg" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
+        <img src="https://begreenpackaging.files.wordpress.com/2012/04/sfsu.jpg" alt="HTML tutorial" style="width:300;height:300px;border:1px;">
       </a>
         
       </div>
+                                          <!--  row 1  -->
+  <div class="row CenText " >
+    
     <div class="col row1row2box">
       <a href="Climate.html" class="btn btn-primary btn-lg active" role="button" style="height:100%;width:100%"> Climate</a>
     </div>
