--- a/Climate.html
+++ b/Climate.html
@@ -99,7 +99,8 @@ and changing ecosystems show systems changing faster than IPCC predictions (Bloc
   
                                           <!--  row 2  -->
   <div class="row CenText">
-   <iframe width="100%" height="700" src="https://www.youtube.com/embed/XeEYaX82jSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h1>The World in 2050  Documentary</h1>
+   <iframe width="100%" height="700" src="https://www.youtube.com/embed/XeEYaX82jSE" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
  
                                         
