--- a/water.html
+++ b/water.html
@@ -97,7 +97,7 @@ known as water conservation or water efficiency.
     <button onClick="waterFunction()">Calculate</button>
     <p id="result"></p>
     <script>
-      waterFunction() {
+      function waterFunction() {
         var t= document.getElementById("minutes").value;
         t= 2.1*t;
         document.getElementById("result").innerHTML =t;
