--- a/water.html
+++ b/water.html
@@ -90,8 +90,9 @@ known as water conservation or water efficiency.
   
   
                                           <!--  row 2  -->
-  <div class="row CenText">
     <h3>Find out how much water you waste when you shower</h3>
+    
+  <div class="row CenText">
     Minutes you take showering: 
     <input type="number" id="minutes" min="1"><br>
     <button onClick="waterFunction()">Calculate</button>
@@ -100,7 +101,7 @@ known as water conservation or water efficiency.
       function waterFunction() {
         var t= document.getElementById("minutes").value;
         t= 2.1*t;
-        document.getElementById("result").innerHTML =t;
+        document.getElementById("result").innerHTML = "you have used "t + "gallons of water while showering";
       }
     </script>
   </div>
