--- a/water.html
+++ b/water.html
@@ -101,7 +101,7 @@ known as water conservation or water efficiency.
       function waterFunction() {
         var t= document.getElementById("minutes").value;
         t= 2.1*t;
-        document.getElementById("result").innerHTML = "you have used "t + "gallons of water while showering";
+        document.getElementById("result").innerHTML = "you have used "+ t + "gallons of water while showering";
       }
     </script>
   </div>
