--- a/water.html
+++ b/water.html
@@ -92,10 +92,9 @@ known as water conservation or water efficiency.
     <h3>Find out how much water you waste when you shower</h3>
     
   <div class="row CenText">
-      <a href="">
-        <img src="https://www.home-water-works.org/sites/default/files/img/indoor/wm-shower.jpg" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
+      <a href="https://www.home-water-works.org/indoor-use/showers">
+        <img src="https://www.home-water-works.org/sites/default/files/img/indoor/wm-shower.jpg" alt="HTML tutorial" style="width:100px;height:150;border:0;">
       </a>
-      <img src="" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
     Minutes you take showering: 
     <input type="number" id="minutes" min="1"><br>
     <button onClick="waterFunction()">Calculate</button>
