--- a/water.html
+++ b/water.html
@@ -81,7 +81,7 @@ known as water conservation or water efficiency.
 
 
     </div>
-    <div class ="col">
+    <div class ="row">
       <a href="https://www.home-water-works.org/indoor-use/showers">
         <img src="water.JPG" alt="HTML tutorial" style="width:100px;height:160px;border:0;">
       </a>
