--- a/water.html
+++ b/water.html
@@ -89,7 +89,7 @@ known as water conservation or water efficiency.
   </div>
 
                                           <!--  row 2  -->
-    <h3>Find out how much water you waste when you shower</h3>
+    <h3>Find out how much water you use when you shower</h3>
     
   <div class="row CenText">
       <a href="https://www.home-water-works.org/indoor-use/showers">
@@ -103,7 +103,7 @@ known as water conservation or water efficiency.
       function waterFunction() {
         var t= document.getElementById("minutes").value;
         t= 2.1*t;
-        document.getElementById("result").innerHTML = "you have used "+ t + "gallons of water while showering";
+        document.getElementById("result").innerHTML = " On average you use: "+ t + "gallons of water while showering";
       }
     </script>
   </div>
