--- a/water.html
+++ b/water.html
@@ -83,7 +83,7 @@ known as water conservation or water efficiency.
     </div>
     <div class ="row">
       <a href="https://www.home-water-works.org/indoor-use/showers">
-        <img src="water.JPG" alt="HTML tutorial" style="width:100px;height:160px;border:0;">
+        <img src="water.JPG" alt="HTML tutorial" style="width:100%;height:100%;border:0;">
       </a>
     </div>
   </div>
@@ -92,9 +92,11 @@ known as water conservation or water efficiency.
     <h3>Find out how much water you use when you shower</h3>
     
   <div class="row CenText">
-      <a href="https://www.home-water-works.org/indoor-use/showers">
-        <img src="https://www.home-water-works.org/sites/default/files/img/indoor/wm-shower.jpg" alt="HTML tutorial" style="width:100px;height:150;border:0;">
-      </a>
+      <div class="row">
+        <a href="https://www.home-water-works.org/indoor-use/showers">
+            <img src="https://www.home-water-works.org/sites/default/files/img/indoor/wm-shower.jpg" alt="HTML tutorial" style="width:100px;height:150;border:0;">
+        </a>
+      </div>
     Minutes you take showering: 
     <input type="number" id="minutes" min="1"><br>
     <button onClick="waterFunction()">Calculate</button>
