--- a/water.html
+++ b/water.html
@@ -83,7 +83,7 @@ known as water conservation or water efficiency.
     </div>
     <div class ="row">
       <a href="https://www.home-water-works.org/indoor-use/showers">
-        <img src="water.JPG" alt="HTML tutorial" style="width:100%;height:100%;border:0;">
+        <img src="water.JPG" alt="HTML tutorial" style="width:600px;height:500px;border:0;">
       </a>
     </div>
   </div>
