--- a/water.html
+++ b/water.html
@@ -83,7 +83,7 @@ known as water conservation or water efficiency.
     </div>
     <div class ="row">
       <a href="">
-        <img src="water.JPG" alt="HTML tutorial" style="width:1000px;height:500px;border:0;">
+        <img src="water.JPG" alt="HTML tutorial" style="width:1000px;height:600px;border:5px;">
       </a>
     </div>
   </div>
