--- a/water.html
+++ b/water.html
@@ -45,7 +45,7 @@
 
   
   
-<div class="container-fluid">
+<div class="container-fluid purp">
                                           <!--  row 1  -->
   <div class="row CenText " >
     <div class ="col">
