--- a/water.html
+++ b/water.html
@@ -18,12 +18,12 @@
 
 <title>ThinkLfy</title>
   
-<style>
+<!-- <style>
 
 p {
   color: white;
 }
-</style>
+</style> -->
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -46,7 +46,6 @@ p {
 </nav>
 <!--*******************************************End of nav*********************************************************-->
 
-  
   
 <div class="container-fluid purp">
                                           <!--  row 1  -->
