--- a/Energy.html
+++ b/Energy.html
@@ -13,9 +13,13 @@
 
 <title>ThinkLfy</title>
   
-<style>
+ <style>
+    body {
+      background-color: purple;
+      color:white;
+     }
+ </style>
   
-</style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -77,8 +81,8 @@ batteries.
          
     </div>
     <div class ="col">
-      <a href="https://enterpriseclojure.com/clojure/1-ecosystem.html#/the_clojure_ecosystem">
-        <img src="https://enterpriseclojure.com/img/ecosystem.jpg" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
+      <a href="https://gfycat.com/digitalgloomyemperorshrimp">
+        <iframe src='https://gfycat.com/ifr/DigitalGloomyEmperorshrimp' frameborder='0' scrolling='no' allowfullscreen width='640' height='412'></iframe><p> <a href="https://gfycat.com/digitalgloomyemperorshrimp">via Gfycat</a></p>
       </a>
     </div>
   </div>
