--- a/pollution.html
+++ b/pollution.html
@@ -73,8 +73,8 @@ with acid solutions until most of the metal ore has been dissolved and removed.<
  </div>
   
     <div class ="col">
-      <a href="https://enterpriseclojure.com/clojure/1-ecosystem.html#/the_clojure_ecosystem">
-        <img src="https://enterpriseclojure.com/img/ecosystem.jpg" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
+      <a href="">
+        <img src="http://images.myshared.ru/20/1242070/slide_1.jpg" alt="HTML tutorial" style="width:100%;height:600px;border:0;">
       </a>
     </div>
   </div>
